--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "1.0.0",
   "packageManager": "npm@11.6.2",
   "scripts": {
-    "build:engine": "cd engine && wasm-pack build --target web --out-dir ../web/pkg",
-    "dev": "node web/dev-server.js",
-    "compiler": "node compiler-server.js",
+    "dev": "vite --config .config/vite.config.js",
+    "build": "vite build --config .config/vite.config.js",
     "start": "office-addin-debugging start web/manifest.xml desktop",
     "stop": "office-addin-debugging stop web/manifest.xml"
   },
   "devDependencies": {
-    "http-server": "^14.1.1",
-    "office-addin-debugging": "^6.0.4",
-    "office-addin-dev-settings": "^3.0.4",
-    "office-addin-manifest": "^2.1.2",
     "@eslint/css": "^0.14.1",
     "@html-eslint/eslint-plugin": "^0.52.1",
     "@html-eslint/parser": "^0.52.0",
     "@stylistic/eslint-plugin": "^5.7.0",
     "eslint": "^9.39.2",
-    "globals": "^17.0.0"
+    "globals": "^17.0.0",
+    "http-server": "^14.1.1",
+    "office-addin-debugging": "^6.0.4",
+    "office-addin-dev-settings": "^3.0.4",
+    "office-addin-manifest": "^2.1.2",
+    "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "@myriaddreamin/typst-ts-web-compiler": "^0.7.0-rc2",
+    "@myriaddreamin/typst.ts": "^0.7.0-rc2"
   }
 }
