--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "@myriaddreamin/typst-ts-renderer": "^0.7.0-rc2",
     "@myriaddreamin/typst-ts-web-compiler": "^0.7.0-rc2",
     "@myriaddreamin/typst.ts": "^0.7.0-rc2"
   }
