Convert `typst.js` to `typst.ts`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,8 @@
     ],
     "cSpell.language": "en",
     "cSpell.words": [
+        "myriaddreamin",
         "powerpoint",
-        "typst",
+        "typst"
     ],
 }
