--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
             "ESNext",
             "DOM"
         ],
+        // https://github.com/vitejs/vite/discussions/14950#discussioncomment-7542722
+        "types": ["vite/client"],
         "moduleResolution": "Node",
         "isolatedModules": true,
         "useDefineForClassFields": true,
